<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/firstLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/Фамилия">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/Имя">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/Отчество">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/Год">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/Город">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/Школа">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/Опыт_программирования">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/Знание_языков_программирования">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp">
        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp">
        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp">
        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp">
        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp">
        </EditText>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="30dp">
        </RadioButton>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="30dp">
        </RadioButton>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="30dp">
        </CheckBox>
    </LinearLayout>

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3">
    </CalendarView>

</LinearLayout>